feat(turbo): background GC sweeper - pay the pause cost while nobody is online
GC pauses cannot be eliminated entirely (a collector needs a safe point), but
their mid-fight sting can be removed by doing the old-generation work ahead of
time. turbo.gc-background adds a repeating gate that calls System.gc() +
runFinalization() on the worker pool ONLY while the server is empty and the
sampled tick health is >= clearance (default 90%), so pause-work lands in idle
moments instead of during fights. Sweeps are cooldown-guarded, silent unless
bytes were actually freed, and skipped entirely on ZGC (concurrent there).
start.bat now also sets -XX:SoftRefLRUPolicyMSPerMB=0 so soft caches (class
metadata, code cache) are reclaimed at the next minor cycle instead of
carrying into a full GC. Wired into /rumireload and /turbo help.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>